--------------------------------------------------------------------------------
drkns 2024-01-07 18:24:05+00:00 - build 6249

1. FSF.LStr[n]icmp case insensitivity depended on system settings.

--------------------------------------------------------------------------------
yjh 2024-01-05 23:58:39+03:00 - build 6248

1. fmt v10.2.1

--------------------------------------------------------------------------------
zg 2024-01-05 09:36:01+02:00 - build 6247

1. M#4026: GUID for replace confirmation dialog in editor.

--------------------------------------------------------------------------------
drkns 2024-01-03 18:53:27+00:00 - build 6246

1. More ranges.

2. Use std-like source_location.

--------------------------------------------------------------------------------
yjh 2024-01-03 10:58:29+03:00 - build 6245

1. fmt v10.2.

--------------------------------------------------------------------------------
MZK 2024-01-01 00:00:00-08:00 - build 6244

1. More `VMenu` refactoring.

--------------------------------------------------------------------------------
drkns 2023-12-30 20:09:55+00:00 - build 6243

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2023-12-30 12:07:31+00:00 - build 6242

1. Use bit_cast where appropriate.

2. Warnings.

--------------------------------------------------------------------------------
drkns 2023-12-30 01:44:13+00:00 - build 6241

1. gh-769: "Find All" list is truncated from the top on a short screen.

--------------------------------------------------------------------------------
MZK 2023-12-29 16:07:42-08:00 - build 6240

1. Refactored `VMenu::ShowMenu` and its vicinity.

--------------------------------------------------------------------------------
drkns 2023-12-29 22:04:10+00:00 - build 6239

1. Refactoring.

2. Logging improvements.

3. More info in crash reports.

--------------------------------------------------------------------------------