@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+zg 2024-01-12 12:01:38+02:00 - build 6250
+
+1. guid for copy progress dialog.
+
+--------------------------------------------------------------------------------
 drkns 2024-01-07 18:24:05+00:00 - build 6249
 
 1. FSF.LStr[n]icmp case insensitivity depended on system settings.
